Tmp dir mapping for Windows process, per TW-74212